[GOT-20] Integration tests
