# docs/swagger.json
@@ -26,11 +26,11 @@
                 "parameters": [
                     {
                         "description": "Set up translation",
-                        "name": "input",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.translationInput"
+                            "$ref": "#/definitions/v1.doTranslateRequest"
                         }
                     }
                 ],
@@ -44,7 +44,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorResponse"
+                            "$ref": "#/definitions/v1.response"
                         }
                     }
                 }
@@ -68,16 +68,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.Translation"
-                            }
+                            "$ref": "#/definitions/v1.historyResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorResponse"
+                            "$ref": "#/definitions/v1.response"
                         }
                     }
                 }
@@ -106,16 +103,7 @@
                 }
             }
         },
-        "v1.errorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "message"
-                }
-            }
-        },
-        "v1.translationInput": {
+        "v1.doTranslateRequest": {
             "type": "object",
             "required": [
                 "destination",
@@ -134,6 +122,26 @@
                 "source": {
                     "type": "string",
                     "example": "auto"
+                }
+            }
+        },
+        "v1.historyResponse": {
+            "type": "object",
+            "properties": {
+                "history": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Translation"
+                    }
+                }
+            }
+        },
+        "v1.response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "message"
                 }
             }
         }
