# internal/delivery/http/v1/error.go
@@ -1,6 +1,19 @@
 package v1
 
-// TODO
-type errorResponse struct {
+import (
+	"github.com/evrone/go-service-template/pkg/logger"
+	"github.com/gin-gonic/gin"
+)
+
+type response struct {
 	Error string `json:"error" example:"message"`
+}
+
+func errorResponse(c *gin.Context, code int, err error, msg string) {
+	logger.Error(err, "http - v1 - errorResponse",
+		logger.Field{Key: "path", Val: c.FullPath()},
+		logger.Field{Key: "request_method", Val: c.Request.Method},
+		logger.Field{Key: "response_code", Val: code},
+	)
+	c.AbortWithStatusJSON(code, response{msg})
 }
